Added initial structure to the main page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Thanks For Your Repo
+<!doctype html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+  <title>Thanks For Your Repo | Get Thanks For Your Github Projects</title>
+  <meta name="description" content="Thanks For Your Repo is an easy way to allow people to thank you for your Github project">
+  <meta name="viewport" content="width=device-width">
+</head>
+<body>
+  <h1>Thanks For Your Repo</h1>
+
+  <footer>
+    <section>
+      <a id="hiring" href="http://www.intridea.com/careers">We're Hiring!</a>
+      <span>Copyright &copy; 2013 <a href="http://www.intridea.com">Intridea</a>. Released under the MIT License on <a href="https://github.com/intridea/thanks-for-your-repo">GitHub</a>.</span>
+      <a id="footer_logo" href="http://www.intridea.com">Intridea.com</a>
+    </section>
+  </footer>
+</body>
+
+</html>
