Update my bio and add explanation text to the example button

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <p>People want to thank you for the open source project you created. Thanks For Your Repo makes it easy for people to do so. By filling out the form below with your Github repo URL and Twitter handle, we'll give you a piece of code that you can add to your README file that displays a little "Say Thanks" button. When someone clicks on that button, it'll create a thank you tweet that they can send out.</p>
 
     <h2>An Example Button</h2>
+    <p>Click on the button below to see how it works. And don't forget to actually send the tweet :)</p>
     <p>
       <a href="http://twitter.com/home/?status=Thanks @intridea for https%3A%2F%2Fgithub.com%2Fintridea%2Fthanks-for-your-repo"><img src="http://placehold.it/100x50" alt="Say Thanks" /></a>
     </p>
@@ -86,7 +87,7 @@
         </ul>
         <p>Leaving a culinary career behind for a career in tech, Robert has more than 14 years experience building businesses, developing web applications, conducting conferences, and generally geeking out with a combination of marketing and tech.</p>
         <p>Prior to joining Intridea, Robert was the CEO of Dempsey Marketing, helping an international clientele gain more business using his system of Trifecta Marketing. Before that, he was the CEO of Atlantic Dominion Solutions, a Ruby on Rails development firm that served clients including Chrysler. He also created and chaired the first Ruby on Rails conference in the southeast - Acts as Conference - two years in a row.</p>
-        <p>Today you'll find Rob at a conference, meetup, or slanging Ruby, Python and R to mine the Intridea web and CRM analytics.</p>
+        <p>Today you'll find Rob at a conference, meetup, or slinging Ruby, Python and R to mine the Intridea web and CRM analytics.</p>
       </section>
     </div>
   </div>
