Remove default values in the form since we have an example button

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <table>
           <tr>
             <td>Your Github Repo URL:</td>
-            <td><input name="githubRepoUrl" type="text" value="https://github.com/intridea/thanks-for-your-repo" /></td>
+            <td><input name="githubRepoUrl" type="text" value="" /></td>
           </tr>
           <tr>
             <td>Your Twitter Handle:</td>
-            <td><input name="twitterHandle" type="text" value="intridea" /></td>
+            <td><input name="twitterHandle" type="text" value="" /></td>
           </tr>
           <tr>
             <td>&nbsp;</td>
