Updated header buttons as there are only two. Added more explanation to the example.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     </div>
     <div id="quick_links" class="cf">
       <span class="button_outer"><a href="https://github.com/intridea/thanks-for-your-repo/" alt="" class="button">Fork this on Github</a></span>
-      <span class="button_outer"><a href="docs/index.html" alt="" class="button">Full Documentation</a></span>
       <span class="button_outer"><a href="https://github.com/intridea/thanks-for-your-repo/issues" alt="" class="button">Report a Problem</a></span>       
     </div>
     </section>
@@ -47,15 +46,10 @@
   <div class="col">
     <h2>What is Thanks For Your Repo?</h2>
     <p>People want to thank you for the open source project you created. Thanks For Your Repo makes it easy for people to do so. By filling out the form below with your Github repo URL and Twitter handle, we'll give you a piece of code that you can add to your README file that displays a little "Say Thanks" button. When someone clicks on that button, it'll create a thank you tweet that they can send out.</p>
-
-    <h2>An Example Button</h2>
-    <p>Click on the button below to see how it works. And don't forget to actually send the tweet :)</p>
-    <p>
-      <a href="http://twitter.com/home/?status=Thanks @intridea for https%3A%2F%2Fgithub.com%2Fintridea%2Fthanks-for-your-repo"><img src="http://placehold.it/100x50" alt="Say Thanks" /></a>
-    </p>
         
     <h2>Getting Started</h2>
-    <p>Simply fill out the form below and we'll generate the Say Thanks button code for you!</p>
+    <p>Simply fill out the form below and we'll generate the Say Thanks button code for you! Then, copy and paste the code from the alert box into the README file of your project.</p>
+    <p>&nbsp;</p>
     <p>
       <form id="inputForm" action="#">
         <table>
@@ -77,7 +71,13 @@
   </div>
   
   <div class="col">
-    <h2>Created & Maintained By:</h2>
+    <h2>An Example Button</h2>
+    <p>Click on the button below to see how it works. And don't forget to actually send the tweet :)</p>
+    <p>
+      <a href="http://twitter.com/home/?status=Thanks @intridea for https%3A%2F%2Fgithub.com%2Fintridea%2Fthanks-for-your-repo"><img src="http://placehold.it/100x50" alt="Say Thanks" /></a>
+    </p>
+
+    <h2>Created By:</h2>
     <div id="author" class="cf">
       <section class="bio">
         <h1>Robert Dempsey</h1>
