Update the code to include the project name in the tweet

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
       <form id="inputForm" action="#">
         <table>
           <tr>
-            <td>Your Github Repo URL:</td>
+            <td>Project Name:</td>
+            <td><input name="githubProjectName" type="text" value="" /></td>
+          </tr>
+          <tr>
+            <td>Github Repo URL:</td>
             <td><input name="githubRepoUrl" type="text" value="" /></td>
           </tr>
           <tr>
@@ -74,7 +78,7 @@
     <h2>An Example Button</h2>
     <p>Click on the button below to see how it works. And don't forget to actually send the tweet :)</p>
     <p>
-      <a href="http://twitter.com/home/?status=Thanks @intridea for https%3A%2F%2Fgithub.com%2Fintridea%2Fthanks-for-your-repo"><img src="http://placehold.it/100x50" alt="Say Thanks" /></a>
+      <a href="http://twitter.com/home/?status=Thanks @intridea for making Thanks+For+Your+Repo: https%3A%2F%2Fgithub.com%2Fintridea%2Fthanks-for-your-repo%2F"><img src="http://placehold.it/100x50" alt="Say Thanks" /></a>
     </p>
 
     <h2>Created By:</h2>
@@ -86,8 +90,8 @@
           <li class="icn_world"><a href="http://robertwdempsey.com/">Blog</a></li>
         </ul>
         <p>Leaving a culinary career behind for a career in tech, Robert has more than 14 years experience building businesses, developing web applications, conducting conferences, and generally geeking out with a combination of marketing and tech.</p>
-        <p>Prior to joining Intridea, Robert was the CEO of Dempsey Marketing, helping an international clientele gain more business using his system of Trifecta Marketing. Before that, he was the CEO of Atlantic Dominion Solutions, a Ruby on Rails development firm that served clients including Chrysler. He also created and chaired the first Ruby on Rails conference in the southeast - Acts as Conference - two years in a row.</p>
-        <p>Today you'll find Rob at a conference, meetup, or slinging Ruby, Python and R to mine the Intridea web and CRM analytics.</p>
+        <p>Prior to joining Intridea as the Director of Engagement, Robert was the CEO of Dempsey Marketing, helping an international clientele gain more business using his system of Trifecta Marketing. Before that, he was the CEO of Atlantic Dominion Solutions, a Ruby on Rails development firm that served clients including Chrysler. He also created and chaired the first Ruby on Rails conference in the southeast - Acts as Conference - two years in a row.</p>
+        <p>Today you'll find Rob promoting Intridea at conferences and meetups, or slinging Ruby, Python and R to mine the Intridea web and CRM analytics.</p>
       </section>
     </div>
   </div>
