Updated favicon and tag images; updated links to point to my blog

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header class="cf">
     <section>
-        <a href="http://www.intridea.com" id="tag"></a>
+        <a href="http://robertwdempsey.com?ref=thanks-for-your-repo" id="tag"></a>
     <div id="title">
       <h1>Thanks For Your Repo</h1>
     </div>
     <div id="quick_links" class="cf">
-      <span class="button_outer"><a href="https://github.com/intridea/thanks-for-your-repo/" alt="" class="button">Fork this on Github</a></span>
-      <span class="button_outer"><a href="https://github.com/intridea/thanks-for-your-repo/issues" alt="" class="button">Report a Problem</a></span>       
+      <span class="button_outer"><a href="https://github.com/rdempsey/thanks-for-your-repo/" alt="" class="button">Fork this on Github</a></span>
+      <span class="button_outer"><a href="https://github.com/rdempsey/thanks-for-your-repo/issues" alt="" class="button">Report a Problem</a></span>       
     </div>
     </section>
   </header>
@@ -100,9 +100,7 @@
   
   <footer>
   <section>
-  <a id="hiring" href="http://www.intridea.com/careers">We're Hiring!</a>
-  <span>Copyright &copy; 2013 <a href="http://www.intridea.com">Intridea</a>. Released under the MIT License on <a href="https://github.com/intridea/thanks-for-your-repo">GitHub</a>.</span>
-  <a id="footer_logo" href="http://www.intridea.com">Intridea.com</a>
+  <span>Copyright &copy; 2013 <a href="http://robertwdempsey.com?ref=thanks-for-your-repo">Robert Dempsey</a>. Released under the MIT License on <a href="https://github.com/rdempsey/thanks-for-your-repo">GitHub</a>.</span>
 
   </section>
   </footer>
