Update example tweet

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <h2>An Example Button</h2>
     <p>Click on the button below to see how it works. And don't forget to actually send the tweet :)</p>
     <p>
-      <a href="http://twitter.com/home/?status=Thanks @intridea for making Thanks+For+Your+Repo: https%3A%2F%2Fgithub.com%2Fintridea%2Fthanks-for-your-repo%2F"><img src="http://placehold.it/100x50" alt="Say Thanks" /></a>
+      <a href="http://twitter.com/home/?status=Thanks @rdempsey for making Thanks+For+Your+Repo: https%3A%2F%2Fgithub.com%2Fintridea%2Fthanks-for-your-repo%2F"><img src="http://placehold.it/100x50" alt="Say Thanks" /></a>
     </p>
 
     <h2>Created By:</h2>
