--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <li class="icn_world"><a href="http://robertwdempsey.com/">Blog</a></li>
         </ul>
         <p>Leaving a culinary career behind for a career in tech, Robert has more than 14 years experience building businesses, developing web applications, conducting conferences, and generally geeking out with a combination of marketing and tech.</p>
-        <p>Prior to joining Intridea as the Director of Engagement, Robert was the CEO of Dempsey Marketing, helping an international clientele gain more business using his system of Trifecta Marketing. Before that, he was the CEO of Atlantic Dominion Solutions, a Ruby on Rails development firm that served clients including Chrysler. He also created and chaired the first Ruby on Rails conference in the southeast - Acts as Conference - two years in a row.</p>
+        <p>Prior to joining <a href="http://www.intridea.com">Intridea</a> as the Director of Engagement, Robert was the CEO of Dempsey Marketing, helping an international clientele gain more business using his system of Trifecta Marketing. Before that, he was the CEO of Atlantic Dominion Solutions, a Ruby on Rails development firm that served clients including Chrysler. He also created and chaired the first Ruby on Rails conference in the southeast - Acts as Conference - two years in a row.</p>
         <p>Today you'll find Rob promoting Intridea at conferences and meetups, or slinging Ruby, Python and R to mine the Intridea web and CRM analytics.</p>
       </section>
     </div>
