Turned the tagline into a link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a id="forkme_banner" href="https://github.com/rdempsey/thanks-for-your-repo">View on GitHub</a>
 
           <h1 id="project_title">Thanks For Your Repo</h1>
-          <h2 id="project_tagline">Add a button to your README and get thanked for your project. http://rdempsey.github.io/thanks-for-your-repo/</h2>
+          <h2 id="project_tagline">Add a button to your README and get thanked for your project. <a href="http://rdempsey.github.io/thanks-for-your-repo/">http://rdempsey.github.io/thanks-for-your-repo/</a></h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/rdempsey/thanks-for-your-repo/zipball/master">Download this project as a .zip file</a>
