Update links for the javascripts so they work post-overhaul

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script> 
     <script src="http://malsup.github.com/jquery.form.js"></script>
-    <script src="js/libs/modernizr-2.5.3.min.js"></script>
     <script type="text/javascript">
     $(document).ready(function() { 
     var options = { 
@@ -92,7 +91,7 @@
         <p class="copyright">Copyright &copy; 2013 <a href="http://robertwdempsey.com?ref=thanks-for-your-repo">Robert Dempsey</a>. Released under the MIT License on <a href="https://github.com/rdempsey/thanks-for-your-repo">GitHub</a>.</p>
       </footer>
     </div>
-    <script src="js/script.js"></script>
-    <script src="js/plugins.js"></script>
+    <script src="javascripts/script.js"></script>
+    <script src="javascripts/plugins.js"></script>
   </body>
 </html>
