Update the link to my blog with a ref

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h3>Robert Dempsey</h3>
         <ul class="author-links cf">
           <li class="icn_twitter"><a href="https://twitter.com/rdempsey">@rdempsey</a></li>
-          <li class="icn_world"><a href="http://robertwdempsey.com/">Blog</a></li>
+          <li class="icn_world"><a href="http://robertwdempsey.com/?ref=thanks-for-your-repo">Blog</a></li>
         </ul>
         <p>Leaving a culinary career behind for a career in tech, Robert has more than 14 years experience building businesses, developing web applications, conducting conferences, and generally geeking out with a combination of marketing and tech.</p>
         <p>Prior to joining <a href="http://www.intridea.com">Intridea</a> as the Director of Engagement, Robert was the CEO of Dempsey Marketing, helping an international clientele gain more business using his system of Trifecta Marketing. Before that, he was the CEO of Atlantic Dominion Solutions, a Ruby on Rails development firm that served clients including Chrysler. He also created and chaired the first Ruby on Rails conference in the southeast - Acts as Conference - two years in a row.</p>
