Add more text to the title.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <title>Thanks For Your Repo</title>
+    <title>Thanks For Your Repo : Robert Dempsey</title>
     <meta name="description" content="Thanks For Your Repo : Add a button to your README and get thanked for your project. http://rdempsey.github.io/thanks-for-your-repo/" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
   </head>
